source/css/pages/_team.sass
$team-body-font: 25px
$team-body-line-height: 40px
$team-name-bar-font: 29px
$team-name-bar-email-font: 18px

#team-content
  margin-top: 40px

section.team
  width: 1120px
  margin-left: 40px
  background: $very-light-gray
  color: darken($very-light-gray, 75%)
  margin-top: 40px
  margin-bottom: 60px

  .name-bar
    padding: 20px
    font-family: "Quicksand"
    color: white

    .name
      font-weight: bold
      font-size: 29px

    .email
      float: right
      font-size: 18px
      position: relative
      top: 2px
      display: inline-flex

  > img
    float: left
    width: 33%
    margin: 4%
    border: 1px solid rgba(0, 0, 0, 0.1)

    @media (max-width : 800px)
      margin-top: 6%

    @media (max-width : 550px)
      width: 92%
      margin: 4% 4% 6%



  .body
    padding: 10px 40px
    font-size: $team-body-font
    line-height: $team-body-line-height

    a, a:visited, a:hover
      text-decoration: none
      color: darken($very-light-gray, 75%)
      font-weight: bold

  &#dane .name-bar
    background: $dark-blue

  &#lennon .name-bar
    background: $dark-yellow

  &#dante .name-bar
    background: $green

@media (max-width : 800px)
  section.team
    width: auto
    min-width: 320px
    margin-right: 40px
    .body
      font-size: $mobile-font-multiplier * $team-body-font
      line-height: $mobile-font-multiplier * $team-body-line-height
      padding: 1.5% 6%
    .name-bar
      padding: 17px 0px 24px 0px
      text-align: center
      .name
        font-size: $mobile-font-multiplier * $team-name-bar-font
        float: none
      .email
        font-size: $mobile-font-multiplier * $team-name-bar-email-font * 0.8 + 5px
        float: none
        display: block

@media (max-width : 680px)
  section.team
    width: 100%
    min-width: 0
    margin-right: 0
    margin-left: 0
    .body
      font-size: $mobile-font-multiplier * $team-body-font * 0.8
      line-height: $mobile-font-multiplier * $team-body-line-height * 0.8
    .name-bar
      padding: 17px 0px 24px 0px
      text-align: center
      .name
        font-size: $mobile-font-multiplier * $team-name-bar-font * 0.8
        float: none
      .email
        font-size: $mobile-font-multiplier * $team-name-bar-email-font * 0.7 + 5px
        float: none
        display: block

